--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,3 +31,8 @@ jobs:
 
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}"
+
+        with:
+          args: deploy --token "${{ secrets.FIREBASE_TOKEN }}"
+
