--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -27,3 +27,7 @@ jobs:
 
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: "${{ secrets.FIREBASE_TOKEN }}"
+
+        with:
+          args: deploy --token "${{ secrets.FIREBASE_TOKEN }}"
